# capital-gains-calculator

./: .editorconfig  .env  .gitignore  .kodiak.toml  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  GBP_USD_monthly_history.csv  LICENSE  README.md  args_parser.py  calc.py  currency_converter.py  currency_updater.py  dprint.json  exceptions.py  excess_reported_income_sources.md  exchange_rates.csv  initial_prices.csv  initial_prices.py  isin_translation.csv  model.py  parsers.py  pyproject.toml  render_latex.py  requirements.txt  schwab.py  setup.cfg  template.tex.j2  trading212.py  transactions.csv
.github/: dependabot.yml  labeler.yml  labels.yml  markdown-link-check.json  release-drafter.yml
.github/actions/install-deps/: action.yml
.github/actions/pre-commit-cache/: action.yml
.github/actions/prek-cache/: action.yml
.github/workflows/: ci.yml  labeler.yml  manage-labels.yml  publish.yml  release-drafter.yml
cgt_calc/: __init__.py  args_parser.py  args_validators.py  const.py  currency_converter.py  current_price_fetcher.py  dates.py  dividends.py  exceptions.py  initial_prices.py  isin_converter.py  main.py  misc.py  model.py  render_latex.py  setup_logging.py  spin_off_handler.py  transaction_log.py  util.py
cgt_calc/parsers/: __init__.py  base_parsers.py  broker_registry.py  freetrade.py  interactive_brokers.py  mssb.py  raw.py  schwab.py  schwab_cusip_bonds.py  schwab_equity_award_json.py  sharesight.py  trading212.py  vanguard.py
cgt_calc/parsers/eri/: __init__.py  blackrock.py  data_import.py  model.py  raw.py  vanguard.py
cgt_calc/parsers/eri/importer/: __init__.py  blackrock.py  invesco.py  model.py  vanguard.py
cgt_calc/resources/: GBP_USD_monthly_history.csv  __init__.py  dividend.template.tex.j2  initial_isin_translation.csv  initial_prices.csv  template.tex.j2
cgt_calc/resources/eri/: blackrock_eri.csv  invesco_eri.csv  ishares_eri.csv  vanguard_eri.csv
docs/: excess_reported_income_sources.md
scripts/: generate_example_preview.sh  generate_example_report.sh  import_eri_reports.py
tests/: __init__.py  exchange_rates_data.csv  test_calc.py  test_freetrade.py  test_raw.py  test_run_with_example_files_output.txt  test_schwab_2023.py  test_schwab_cash_merger.py  test_schwab_equity_award_json.py  test_sharesight.py  test_trading212_2024.py  test_vanguard.py  utils.py
tests/freetrade/: __init__.py  test_freetrade.py
tests/freetrade/data/: expected_output.txt  transactions.csv
tests/general/: __init__.py  calc_test_data.py  calc_test_data_2.py  test_args_parser.py  test_calc.py  test_currency_converter.py  test_eri_raw.py  test_exceptions.py
tests/general/data/: test_run_with_example_files_output.txt
tests/interactive_brokers/: __init__.py  test_interactive_brokers.py
tests/interactive_brokers/data/: expected_output.txt  test_basic.csv
tests/morgan_stanley/: __init__.py  test_mssb.py
tests/morgan_stanley/data/: Releases Net Shares Report.csv  Releases Report.csv  Withdrawals Report.csv
tests/raw/: __init__.py  test_raw.py
tests/raw/data/: expected_output.txt  expected_output_2.txt  test_data.csv  test_data_2.csv
tests/schwab/: __init__.py  test_schwab.py  test_schwab_2023.py  test_schwab_action_mapping.py  test_schwab_bond_pricing.py  test_schwab_cancel_buy.py  test_schwab_cash_merger.py  test_schwab_corporate_actions.py  test_schwab_date_parsing.py  test_schwab_equity_award_json.py  test_schwab_interest_tax.py  test_schwab_rsu_ordering.py
tests/schwab/data/: schwab_transactions.csv
tests/schwab/data/2023/: expected_output.txt
tests/schwab/data/bond_interest/: expected_output.txt  transactions.csv
tests/schwab/data/cash_merger/: expected_output.txt  transactions.csv
tests/schwab/data/equity_award/: schwab_equity_award_v2.json
tests/schwab/data/interest_tax/: transactions.csv
tests/schwab/data/rsu_settlement/: awards.csv  expected_output.txt  transactions.csv
tests/sharesight/: __init__.py  test_sharesight.py
tests/sharesight/data/: test_run_with_sharesight_files_no_balance_check_output.txt
tests/sharesight/data/inputs/: Taxable Income Report - Test.csv
tests/test_data/: __init__.py  calc_test_data.py  calc_test_data_2.py  schwab_equity_award.json  schwab_equity_award_v1.json  schwab_equity_award_v2.json  schwab_equity_award_v2_rounding.json  schwab_transactions.csv  test_run_with_example_files_output.txt  test_run_with_sharesight_files_no_balance_check_output.txt
tests/test_data/freetrade/: expected_output.txt  freetrade_transactions.csv  transactions.csv
tests/test_data/mssb/: Releases Report.csv  Withdrawal Wire Report.csv  Withdrawals Report.csv
tests/test_data/raw/: expected_output.txt  test_data.csv
tests/test_data/schwab/: expected_output.txt  schwab_transactions-2023.csv
tests/test_data/schwab_cash_merger/: expected_output.txt  transactions.csv
tests/test_data/sharesight/: All Trades Report - Test.csv  Taxable Income Report - Test.csv
tests/test_data/trading212/: from_2020-09-11_to_2021-04-02.csv
tests/test_data/trading212_2024/: expected_output.txt  transactions.csv
tests/test_data/vanguard/: expected_output.txt  report.csv
tests/trading212/: __init__.py  test_trading212.py  test_trading212_2024.py
tests/trading212/data/2020/: from_2020-09-11_to_2021-04-02.csv
tests/trading212/data/2024/: expected_output.txt
tests/vanguard/: __init__.py  test_vanguard.py
tests/vanguard/data/: cash_investment_report.csv  expected_output.txt  report.csv
