[tool.poetry]
name = "cgt-calc"
version = "0.0.0"
description = "UK capital gains tax calculator for Charles Schwab and Trading 212 accounts"
authors = ["Ruslan Sayfutdinov <ruslan@sayfutdinov.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/KapJI/capital-gains-calculator"
repository = "https://github.com/KapJI/capital-gains-calculator"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
keywords = [
    "capital gain",
    "schwab",
    "trading 212",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KapJI/capital-gains-calculator/issues"
"Release Notes" = "https://github.com/KapJI/capital-gains-calculator/releases"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = ">=2.11.3,<4.0.0"
requests = "^2.27.1"
types-requests = "^2.27.7"

[tool.poetry.dev-dependencies]
black = "^22.10"
codespell = "^2.2.1"
flake8 = "^5.0.4"
flake8-bugbear = "^22.9.23"
flake8-comprehensions = "^3.10.0"
flake8-docstrings = "^1.6.0"
flake8-simplify = "^0.19.3"
flake8-use-fstring = "^1.4"
flake8-use-pathlib = "^0.3.0"
isort = "^5.10.1"
mypy = "^0.982"
pandas = "^1.3.0"
pre-commit = "^2.20.0"
pylint = "^2.15.4"
pytest = "^7.1.3"

[tool.poetry.scripts]
cgt-calc = 'cgt_calc.main:init'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_sort_within_sections = true
combine_as_imports = true

[tool.pylint.format]
max-line-length = 88


[tool.pylint.messages_control]
# Reasons disabled:
# duplicate-code - unavoidable
# invalid-unary-operand-type - buggy, mypy is enough. See PyCQA/pylint#1472
# too-many-* - not enforced for the sake of readability
# too-few-* - same as too-many-*
disable = [
    "duplicate-code",
    "invalid-unary-operand-type",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
]

[tool.mypy]
python_version = 3.8
show_error_codes = true
strict = true
disallow_any_explicit = true
disallow_any_unimported = true
show_none_errors = true
warn_no_return = true
warn_unreachable = true
